refactor(config): address review feedback on injectExtensions and toList
injectExtensions(JsonObject, B) already mutates and returns the same
builder instance (ConfigBuilder.Extensible.ext() just casts and returns
this), so the .inject(b -> injectExtensions(object, b)) wrapper in the
Avro/Json/Protobuf model adapters was unnecessary ceremony -- call it as
a plain statement instead.

Use .toList() instead of .collect(toList()) in ModelInfo.extensions() and
the three model adapters' constructors.